--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		function sum(){
 			let numbers = document.getElementsByTagName('input')
 			let sum = +numbers[0].value + +numbers[1].value
-			alert(sum)
+			alert(+sum.toFixed(10))
 		}
 		
 	</script>
